infrastructure/k8s/utils/cloudflare/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cd.thisjowi.uk`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls: {}
